# pretix-enablebanking

./: .gitignore  LICENSE  Makefile  README.md  pretixplugin.toml  pyproject.toml
src/pretix_enablebanking/: __init__.py  apps.py  enablebanking_client.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
src/pretix_enablebanking/locale/de/LC_MESSAGES/: django.mo  django.po
src/pretix_enablebanking/locale/de_Informal/LC_MESSAGES/: django.mo  django.po
src/pretix_enablebanking/migrations/: 0001_initial.py
src/pretix_enablebanking/static/pretix_enablebanking/: pretix_enablebanking.js
src/pretix_enablebanking/templates/pretix_enablebanking/: import.html  settings.html
